--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 							<header>
 								<h1>Hi, I'm <strong>Ugwuanyi Rita Nnenna</strong></h1> <h2>A Cloud & DevOps Engineer.</h2>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>
+                              I help organizations deploy, automate, and scale their applications using modern Cloud & DevOps practices.
+                              From AWS infrastructure provisioning to pipeline engineering and container management, 
+                              I deliver solutions that enhance speed, reliability, and operational efficiency.
+                              Here, you'll find a showcase of the real-world projects and systems I've built.
+                            </p>
+
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
