--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Here are the services I offer.</h2>
+						<p>A snapshot of the Cloud & DevOps capabilities I bring to every project.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
