--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Cloud Infrastructure Deployment</h3>
+								<p>I design and deploy secure, scalable cloud environments on AWS using best practice architectures, IAM policies, networking, and automation tools.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
