--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Cloud Infrastructure Deployment</h3>
-								<p>I design and deploy secure, scalable cloud environments on AWS using best practice architectures, IAM policies, networking, and automation tools.</p>
+								<h3>Cloud Infrastructure & IaC Automation</h3>
+								<p>I design and automate scalable AWS environments using Terraform, applying Infrastructure as Code (IaC) to ensure consistent, repeatable, and production ready deployments.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
