--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>CI/CD Pipeline Automation</h3>
+								<p>I build automated CI/CD pipelines using GitHub Actions, improving deployment speed, reliability, and software delivery efficiency.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
