--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Containers & Kubernetes</h3>
+								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
 							</section>
 						</div>
 					</div>
