--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
+								<span class="icon featured fa-cloud"></span>
 								<h3>Cloud Infrastructure & IaC Automation</h3>
 								<p>I design and automate scalable AWS environments using Terraform, applying Infrastructure as Code (IaC) to ensure consistent, repeatable, and production ready deployments.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
+								<span class="icon solid featured fa-gears"></span>
 								<h3>CI/CD Pipeline Automation</h3>
 								<p>I build automated CI/CD pipelines using GitHub Actions, improving deployment speed, reliability, and software delivery efficiency.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<span class="icon featured fa-cubes"></span>
 								<h3>Containers & Kubernetes</h3>
 								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
 							</section>
