--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 -->
 <html>
 	<head>
-		<title>CLOUD & DEVOPS PORTFOLIO PROJECT</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+    <title>CLOUD & DEVOPS PORTFOLIO PROJECT</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
+    <!-- Font Awesome (required for icons like fa-cloud, fa-gears, fa-cubes) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+
+ 	<body>
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
