--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
 
- 	<body>
+  	<body>
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
@@ -59,16 +59,15 @@
 						<h2>Here are the services I offer.</h2>
 						<p>A snapshot of the Cloud & DevOps capabilities I bring to every project.</p>
 					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-cloud"></span>
-								<h3>Cloud Infrastructure & IaC Automation</h3>
-								<p>I design and automate scalable AWS environments using Terraform, applying Infrastructure as Code (IaC) to ensure consistent, repeatable, and production ready deployments.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
+					<div class="col-4 col-6-medium col-12-small">
+        <section class="box style1">
+            <span class="icon featured fa-cloud"></span>
+            <h3>Cloud Infrastructure</h3>
+            <p>I design and deploy secure, scalable AWS cloud architectures using VPC, EC2, IAM, RDS, ALB, and IaC automation.</p>
+		</section>
+		</div>
+			 <div class="col-4 col-6-medium col-12-small">
+				<section class="box style1">
 								<span class="icon solid featured fa-gears"></span>
 								<h3>CI/CD Pipeline Automation</h3>
 								<p>I build automated CI/CD pipelines using GitHub Actions, improving deployment speed, reliability, and software delivery efficiency.</p>
