--- a/index.html
+++ b/index.html
@@ -61,31 +61,26 @@
 					</header>
 					<div class="col-4 col-6-medium col-12-small">
         <section class="box style1">
-            <span class="icon featured fa-cloud"></span>
+            <span class="icon featured fa-code"></span>
             <h3>Cloud Infrastructure</h3>
             <p>I design and deploy secure, scalable AWS cloud architectures using VPC, EC2, IAM, RDS, ALB, and IaC automation.</p>
-        </section>
-    </div>
-
-    <!-- BOX 2 -->
-    <div class="col-4 col-6-medium col-12-small">
-        <section class="box style1">
-            <span class="icon featured fa-cogs"></span>
-            <h3>CI/CD Pipeline Automation</h3>
-            <p>I build automated CI/CD pipelines using GitHub Actions to improve deployment speed, reliability, and efficiency.</p>
-        </section>
-    </div>
-
-    <!-- BOX 3 -->
-    <div class="col-4 col-6-medium col-12-small">
-        <section class="box style1">
-            <span class="icon featured fa-docker"></span>
-            <h3>Containers & Kubernetes</h3>
-            <p>I containerize applications using Docker and manage scalable workloads with Kubernetes clusters.</p>
-        </section>
-      </div>
-
-        </div>
+		</section>
+		</div>
+			 <div class="col-4 col-6-medium col-12-small">
+				<section class="box style1">
+								<span class="icon solid featured fa-gears"></span>
+								<h3>CI/CD Pipeline Automation</h3>
+								<p>I build automated CI/CD pipelines using GitHub Actions, improving deployment speed, reliability, and software delivery efficiency.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-cubes"></span>
+								<h3>Containers & Kubernetes</h3>
+								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
+							</section>
+						</div>
+					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
