--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</header>
 					<div class="col-4 col-6-medium col-12-small">
         <section class="box style1">
-            <span class="icon featured fa-wrench"></span>
+            <span class="icon featured fa-star"></span>
             <h3>Cloud Infrastructure</h3>
             <p>I design and deploy secure, scalable AWS cloud architectures using VPC, EC2, IAM, RDS, ALB, and IaC automation.</p>
 		</section>
