--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-cubes"></span>
+								<span class="icon featured fa-light"></span>
 								<h3>Containers & Kubernetes</h3>
 								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
 							</section>
