--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                               From AWS infrastructure provisioning to pipeline engineering and container management, 
                               I deliver solutions that enhance speed, reliability, and operational efficiency.
                             </p>
-							
+
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
+						<h2>A curated selection of my recent Cloud & DevOps engineering work.</h2>
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
