--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>A curated selection of my recent Cloud & DevOps engineering work.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>A snapshot of my recent Cloud & DevOps projects.</h2>
+						<p>These projects highlight my hands on experience building real cloud infrastructure, CI/CD pipelines, and automated deployments.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
