--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon fa-comment"></span>
+								<span class="icon fa-soundcloud"></span>
 								<h3>Containers & Kubernetes</h3>
 								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
 							</section>
@@ -202,7 +202,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https//Ritacloud23">RITA</a></li>
 						</ul>
 					</footer>
 				</div>
