--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon fa-ship"></span>
+								<span class="icon fa-skype"></span>
 								<h3>Containers & Kubernetes</h3>
 								<p>I containerize applications with Docker and manage production workflows using Kubernetes, ensuring high availability and efficient scaling.</p>
 							</section>
